# projetos_rapidos

./: LICENSE  Makefile  README_usa_gov.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: movielens.ipynb  tratamento_dados_eua.ipynb
